# hackage-analysis

./: CHANGELOG.md  hackage-analysis.cabal
app/: Main.hs
