cabal-version:   3.8
name:            hackage-analysis
version:         0.1.0.0
license:         NONE
author:          andrea@andreabedini.com
maintainer:      Andrea Bedini
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable hackage-client
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , bytestring
                    , Cabal-syntax
                    , containers
                    , hackage-security
                    , hackage-security-HTTP
                    , microlens
                    , mtl
                    , network-uri
                    , tar
                    , time
    hs-source-dirs:   app
    default-language: Haskell2010
